  in the function nvmaccess(). (THH)
- po/es.po: Added up-to-date translations from Gabriel Huertas. (THH)
- bios/tosvars.*: Fixed annoying bug: The two system variables _bell_hook and
  _kcl_hook were linked at a wrong position due to a missing ".global" in the
  assembler file and a missing "extern" in the header file. (THH)

2005-04-14
- po/es.po: Some more updates from Gabriel Huertas. (THH)
- country.mk: Enabled spanish language. (THH)
- bios/blkdev.h: Fixed a signed/unsigned comparison problem that occured in
  the function blkdev_mediach() when it checks the serial number. (THH)

2005-04-18
- bios/bios.c bios/initinfo.c cli/command.c: Screen is now cleared after the
  boot splashscreen and cursor blinking is turned off. (THH)
- bios/screen.c: Fixed bug in Setscreen() - it must not use screenpt but it must
  set the new physical screen address immediatly. (THH)

2005-04-21
- bios/fnt_l9_*.c: Added the Latin-9 fonts. (THH)
- po/LINGUAS po/es.po bios/country.h country.mk: Now using the Latin-9 fonts
  for the Spanish translation. (THH)
- Fixed some linking errors when compiling with "-fno-common". (THH)

2005-04-25
- vdi/vdi_line.c: Changed draw_rect() a little bit (which is used for drawing
  filled polygons) so that the game "Ballerburg" now looks normal again. Well,
  I hope this change doesn't break anything else... (THH)

2005-04-26
- vdi_asm.S/vdi_mouse.c: Support for mouse wheel (vex_wheelv) via Eiffel
  style IKBD status packets. (JKL)

2005-04-27
- bios/fnt_l9_*.c: Fixed a problem with the Spanish fonts - added some missing
  characters. (THH)
- aes/geminit.c: The "#Z" line in EMUDESK.INF now also works if it is not the
  last line in that file. (THH)
- bios/screen.c: Added gap between screen ram and phys_top. (THH)
- aes/gemwmlib.c: Default owner of the desktop window is now the current
  application, not the screen manager. This fixes the problem that some
  programs did not receive mouse button events. (THH)