@@ -1810,6 +1810,10 @@ Start... early ages
 - aes/geminit.c: The "#Z" line in EMUDESK.INF now also works if it is not the
   last line in that file. (THH)
 - bios/screen.c: Added gap between screen ram and phys_top. (THH)
+
+2005-04-28
 - aes/gemwmlib.c: Default owner of the desktop window is now the current
   application, not the screen manager. This fixes the problem that some
   programs did not receive mouse button events. (THH)
+- bios/linea.S vdi/vdi_mouse.c: Enabled the Line-A functions dis_cur & hide_cur
+  again (they still seem to work fine and are needed for GFA Basic). (THH)
